# rag-comparison

./: CLAUDE.md  README.md
lightrag/: .env  pyproject.toml
lightrag/inputs/__enqueued__/: harry-potter-and-the-philosophers-stone.txt
lightrag/rag_storage/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
simple-rag/: .gitignore  README.md  main.py  pyproject.toml
simple-rag/src/: __init__.py  chat.py  document_loader.py  rag_chain.py  vector_store.py
web/: app.py  lightrag_client.py  ollama_client.py  prompts.py  pyproject.toml  simple_rag_client.py
