[project]
name = "simple-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "langchain-huggingface>=0.0.1",
    "chromadb>=0.4.22",
    "ollama>=0.1.6",
    "sentence-transformers>=2.2.2",
]
