[project]
name = "rag-comparison-web"
version = "0.1.0"
description = "Web interface to compare RAG approaches"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.40.0",
    "httpx>=0.28.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-huggingface>=0.0.1",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
]

[tool.uv]
dev-dependencies = []
